--- a/docs/Labs/Lab1/awaf.template
+++ b/docs/Labs/Lab1/awaf.template
@@ -22,214 +22,64 @@
  "Mappings": {
   "BigipRegionMap": {
    "ap-northeast-1": {
-    "Best1000Mbps": "ami-2e4d3048",
     "AWAF200Mbps": "ami-7a9f2a14",
-    "AWAF25Mbps": "ami-6618c919",
-    "Best5000Mbps": "ami-fc4f329a",
-    "Better1000Mbps": "ami-8f532ee9",
-    "Better200Mbps": "ami-11522f77",
-    "Better25Mbps": "ami-73522f15",
-    "Better5000Mbps": "ami-75532e13",
-    "Good1000Mbps": "ami-c6522fa0",
-    "Good200Mbps": "ami-ba532edc",
-    "Good25Mbps": "ami-9e522ff8",
-    "Good5000Mbps": "ami-5e4d3038"
+    "AWAF25Mbps": "ami-6618c919"
    },
    "ap-northeast-2": {
-    "Best1000Mbps": "ami-1955f777",
     "AWAF200Mbps": "ami-7a9f2a14",
-    "AWAF25Mbps": "ami-c49c29aa",
-    "Best5000Mbps": "ami-4954f627",
-    "Better1000Mbps": "ami-7554f61b",
-    "Better200Mbps": "ami-0d57f563",
-    "Better25Mbps": "ami-7e54f610",
-    "Better5000Mbps": "ami-0155f76f",
-    "Good1000Mbps": "ami-9e51f3f0",
-    "Good200Mbps": "ami-a757f5c9",
-    "Good25Mbps": "ami-a354f6cd",
-    "Good5000Mbps": "ami-9151f3ff"
+    "AWAF25Mbps": "ami-c49c29aa"
    },
    "ap-south-1": {
-    "Best1000Mbps": "ami-871e43e8",
     "AWAF200Mbps": "ami-38e2d757",
-    "AWAF25Mbps": "ami-3ae2d755",
-    "Best5000Mbps": "ami-941845fb",
-    "Better1000Mbps": "ami-011f426e",
-    "Better200Mbps": "ami-961b46f9",
-    "Better25Mbps": "ami-6b1f4204",
-    "Better5000Mbps": "ami-ed1a4782",
-    "Good1000Mbps": "ami-201c414f",
-    "Good200Mbps": "ami-6419440b",
-    "Good25Mbps": "ami-6f1f4200",
-    "Good5000Mbps": "ami-a81c41c7"
+    "AWAF25Mbps": "ami-3ae2d755"
    },
    "ap-southeast-1": {
-    "Best1000Mbps": "ami-d5bffda9",
     "AWAF200Mbps": "ami-207c715c",
-    "AWAF25Mbps": "ami-297c7155",
-    "Best5000Mbps": "ami-3bbefc47",
-    "Better1000Mbps": "ami-56bffd2a",
-    "Better200Mbps": "ami-3db9fb41",
-    "Better25Mbps": "ami-9eb9fbe2",
-    "Better5000Mbps": "ami-eeb9fb92",
-    "Good1000Mbps": "ami-45b8fa39",
-    "Good200Mbps": "ami-73bbf90f",
-    "Good25Mbps": "ami-3cbbf940",
-    "Good5000Mbps": "ami-72bbf90e"
+    "AWAF25Mbps": "ami-297c7155"
    },
    "ap-southeast-2": {
-    "Best1000Mbps": "ami-1eb2777c",
     "AWAF200Mbps": "ami-5e6bb23c",
-    "AWAF25Mbps": "ami-5b6bb239",
-    "Best5000Mbps": "ami-0db2776f",
-    "Better1000Mbps": "ami-07b37665",
-    "Better200Mbps": "ami-99b075fb",
-    "Better25Mbps": "ami-f2b07590",
-    "Better5000Mbps": "ami-12b37670",
-    "Good1000Mbps": "ami-e7b07585",
-    "Good200Mbps": "ami-d5b075b7",
-    "Good25Mbps": "ami-fbb07599",
-    "Good5000Mbps": "ami-cab075a8"
+    "AWAF25Mbps": "ami-5b6bb239"
    },
    "ca-central-1": {
-    "Best1000Mbps": "ami-9278fcf6",
     "AWAF200Mbps": "ami-988406fc",
-    "AWAF25Mbps": "ami-40840624",
-    "Best5000Mbps": "ami-527afe36",
-    "Better1000Mbps": "ami-840480e0",
-    "Better200Mbps": "ami-b773f7d3",
-    "Better25Mbps": "ami-d37bffb7",
-    "Better5000Mbps": "ami-937cf8f7",
-    "Good1000Mbps": "ami-e277f386",
-    "Good200Mbps": "ami-c70783a3",
-    "Good25Mbps": "ami-63078307",
-    "Good5000Mbps": "ami-c40783a0"
+    "AWAF25Mbps": "ami-40840624"
    },
    "eu-central-1": {
-    "Best1000Mbps": "ami-39214056",
     "AWAF200Mbps": "ami-01320cea",
-    "AWAF25Mbps": "ami-f3330d18",
-    "Best5000Mbps": "ami-6f214000",
-    "Better1000Mbps": "ami-0fdcba60",
-    "Better200Mbps": "ami-58dcba37",
-    "Better25Mbps": "ami-c4ddbbab",
-    "Better5000Mbps": "ami-d1ddbbbe",
-    "Good1000Mbps": "ami-7edcba11",
-    "Good200Mbps": "ami-fcddbb93",
-    "Good25Mbps": "ami-33dfb95c",
-    "Good5000Mbps": "ami-fadabc95"
+    "AWAF25Mbps": "ami-f3330d18"
    },
    "eu-west-1": {
-    "Best1000Mbps": "ami-fc2f5f85",
     "AWAF200Mbps": "ami-1c4f46f6",
-    "AWAF25Mbps": "ami-004f46ea",
-    "Best5000Mbps": "ami-e711619e",
-    "Better1000Mbps": "ami-ec2b5b95",
-    "Better200Mbps": "ami-862858ff",
-    "Better25Mbps": "ami-c92757b0",
-    "Better5000Mbps": "ami-5728582e",
-    "Good1000Mbps": "ami-4526563c",
-    "Good200Mbps": "ami-4229593b",
-    "Good25Mbps": "ami-fc285885",
-    "Good5000Mbps": "ami-cc2757b5"
+    "AWAF25Mbps": "ami-004f46ea"
    },
    "eu-west-2": {
-    "Best1000Mbps": "ami-da0ce9bd",
     "AWAF200Mbps": "ami-acc029cb",
-    "AWAF25Mbps": "ami-adc029ca",
-    "Best5000Mbps": "ami-590eeb3e",
-    "Better1000Mbps": "ami-2a0ce94d",
-    "Better200Mbps": "ami-570fea30",
-    "Better25Mbps": "ami-1a0de87d",
-    "Better5000Mbps": "ami-560fea31",
-    "Good1000Mbps": "ami-390fea5e",
-    "Good200Mbps": "ami-d20ce9b5",
-    "Good25Mbps": "ami-380fea5f",
-    "Good5000Mbps": "ami-520eeb35"
+    "AWAF25Mbps": "ami-adc029ca"
    },
    "sa-east-1": {
-    "Best1000Mbps": "ami-a02960cc",
     "AWAF200Mbps": "ami-d82104b4",
-    "AWAF25Mbps": "ami-d42104b8",
-    "Best5000Mbps": "ami-9f2960f3",
-    "Better1000Mbps": "ami-5a165f36",
-    "Better200Mbps": "ami-25175e49",
-    "Better25Mbps": "ami-8c175ee0",
-    "Better5000Mbps": "ami-dd165fb1",
-    "Good1000Mbps": "ami-cd165fa1",
-    "Good200Mbps": "ami-e0175e8c",
-    "Good25Mbps": "ami-04175e68",
-    "Good5000Mbps": "ami-49296025"
+    "AWAF25Mbps": "ami-d42104b8"
    },
    "us-east-1": {
-    "Best1000Mbps": "ami-781e0302",
     "AWAF200Mbps": "ami-7e94c901",
-    "AWAF25Mbps": "ami-17570a68",
-    "Best5000Mbps": "ami-33190449",
-    "Better1000Mbps": "ami-f31c0189",
-    "Better200Mbps": "ami-77617c0d",
-    "Better25Mbps": "ami-b31805c9",
-    "Better5000Mbps": "ami-78617c02",
-    "Good1000Mbps": "ami-dd607da7",
-    "Good200Mbps": "ami-fd1f0287",
-    "Good25Mbps": "ami-161c016c",
-    "Good5000Mbps": "ami-6c627f16"
+    "AWAF25Mbps": "ami-17570a68"
    },
    "us-east-2": {
-    "Best1000Mbps": "ami-9cffcbf9",
     "AWAF200Mbps": "ami-d0b881b5",
-    "AWAF25Mbps": "ami-3abd845f",
-    "Best5000Mbps": "ami-e0feca85",
-    "Better1000Mbps": "ami-39fdc95c",
-    "Better200Mbps": "ami-3afdc95f",
-    "Better25Mbps": "ami-83fecae6",
-    "Better5000Mbps": "ami-3bfdc95e",
-    "Good1000Mbps": "ami-6dfdc908",
-    "Good200Mbps": "ami-32fdc957",
-    "Good25Mbps": "ami-8efdc9eb",
-    "Good5000Mbps": "ami-e8fcc88d"
+    "AWAF25Mbps": "ami-3abd845f"
    },
    "us-gov-west-1": {
-    "Best1000Mbps": "ami-651d9504",
     "AWAF200Mbps": "ami-1a34a47b",
-    "AWAF25Mbps": "ami-ba0b9bdb",
-    "Best5000Mbps": "ami-501c9431",
-    "Better1000Mbps": "ami-12189073",
-    "Better200Mbps": "ami-cd1890ac",
-    "Better25Mbps": "ami-f9058d98",
-    "Better5000Mbps": "ami-7b18901a",
-    "Good1000Mbps": "ami-dc058dbd",
-    "Good200Mbps": "ami-5a18903b",
-    "Good25Mbps": "ami-ca068eab",
-    "Good5000Mbps": "ami-9f068efe"
+    "AWAF25Mbps": "ami-ba0b9bdb"
    },
    "us-west-1": {
-    "Best1000Mbps": "ami-6a747d0a",
     "AWAF200Mbps": "ami-d038deb3",
-    "AWAF25Mbps": "ami-a43cdac7",
-    "Best5000Mbps": "ami-09747d69",
-    "Better1000Mbps": "ami-2e777e4e",
-    "Better200Mbps": "ami-13727b73",
-    "Better25Mbps": "ami-cf757caf",
-    "Better5000Mbps": "ami-4a757c2a",
-    "Good1000Mbps": "ami-63757c03",
-    "Good200Mbps": "ami-41747d21",
-    "Good25Mbps": "ami-cc757cac",
-    "Good5000Mbps": "ami-40747d20"
+    "AWAF25Mbps": "ami-a43cdac7"
    },
    "us-west-2": {
-    "Best1000Mbps": "ami-4225a53a",
     "AWAF200Mbps": "ami-dd662ea5",
-    "AWAF25Mbps": "ami-3c662e44",
-    "Best5000Mbps": "ami-2d25a555",
-    "Better1000Mbps": "ami-9e24a4e6",
-    "Better200Mbps": "ami-f721a18f",
-    "Better25Mbps": "ami-8e21a1f6",
-    "Better5000Mbps": "ami-2924a451",
-    "Good1000Mbps": "ami-751f9f0d",
-    "Good200Mbps": "ami-4923a331",
-    "Good25Mbps": "ami-d11e9ea9",
-    "Good5000Mbps": "ami-0c24a474"
+    "AWAF25Mbps": "ami-3c662e44"
    }
   }
  },
@@ -568,21 +418,11 @@
   },
   "imageName": {
    "AllowedValues": [
-    "Good25Mbps",
-    "Good200Mbps",
-    "Good1000Mbps",
-    "Good5000Mbps",
-    "Better25Mbps",
-    "Better200Mbps",
-    "Better1000Mbps",
-    "Better5000Mbps",
-    "Best25Mbps",
-    "Best200Mbps",
-    "Best1000Mbps",
-    "Best5000Mbps"
+    "AWAF25Mbps",
+    "AWAF200Mbps"
    ],
    "ConstraintDescription": "Must be a valid F5 BIG-IP VE image type",
-   "Default": "Best1000Mbps",
+   "Default": "AWAF25Mbps",
    "Description": "F5 BIG-IP VE image",
    "Type": "String"
   },
